# TikZ_FInetune

./: .gitignore  Makefile  README.md  analyze_sweep2.py  analyze_telemetry.py  build_dataset.sh  pyproject.toml
configs/: clean_adapter_recovery.yaml  curriculum_stage0.yaml  curriculum_stage1.yaml  curriculum_stage2.yaml  curriculum_stage3.yaml  curriculum_stage4.yaml  curriculum_stage4_recovery.yaml  curriculum_stage5.yaml  lora_prod.yaml  promotion_gate.yaml  render_config.yaml  stability_profile.yaml
doc/: tikz_mlx_training_pipeline_architecture.md
examples/: minimal_triangle.tex
scratch/: inspect_model.py  inspect_model_config.py  model_structure.txt  patch_yaml_configs.py  search_2400.py  train_final_packed_test_audit.json  verify_optimizer_size_limit.py
tests/: test_ab_eval_optimization.py  test_checkpointing.py  test_collapse_probe.py  test_compiler.py  test_dataset_features.py  test_evaluate.py  test_example_index.py  test_extract.py  test_gradient_telemetry_gate.py  test_hparam_sweep.py  test_lora_handoff.py  test_model_io.py  test_normalize.py  test_prepare.py  test_promotion.py  test_prompting.py  test_recovery.py  test_refine.py  test_reward.py  test_run_stage_resume.py  test_safety_gates.py  test_score_training_dataset.py  test_split_integrity.py  test_stage0_compile_curriculum.py  test_static_critic.py  test_strict_runner_hybrid_scoring.py  test_train.py  test_train_stage2.py
tools/: ab_eval.py  adapter_health.py  audit_prompt_contract.py  audit_tikz_dependencies.py  audit_training_records.py  build_bridge_split.py  build_contamination_safe_eval_split.py  build_curriculum.py  build_eval_manifests.py  (+48 more)
(+106 files in other folders)
